1.0
===

- Adding support for integrating NH models and AR models.
  Sample of how this can be done can be found here:
  https://svn.castleproject.org/svn/castle/trunk/ActiveRecord/Castle.ActiveRecord.Tests/IntegrationWithNHibernateTestCase.cs
  
- Supporting mutli table entities using JoinedTable
  For more details: http://blogs.hibernatingrhinos.com/Craig/archive/2008/06/29/multi-table-entity-support-for-activerecord.aspx

- Added Default property to PropertyAttribute and FieldAttribute. When present it renders
    <column default="value" />
  Which one day will be supported by NHibernate, right?

- Added UpdateSchema to ARStarter

- Applied Alwin's patch adding IValidationProvider common interface for AR models that can be validated.

- Applied Rick Fleming's patch adding GetRegisteredTypes to ActiveRecordStarter.

- Added IsOverride to PrimaryKey attribute to allow a primary key in a derived
  class to override one in the base class.

- Applied Vladimir Okhotnikov's patch fixing TransactionScope Flush 

- Applied Alun Harford's patch fixing AR-182
  "ActiveRecordStarter.ModelsCreated run too late"

- Added IsOverride to Property attribute to allow a property in a derived
  class to override one in the base class.

- Added SqlQueryJoinDefinition, SqlQueryScalarDefinition and refactored to 
  put behavior in IQueryModifier.Apply.

- Added QueryResultTransformer modifier to allow setting a results transformer.

- Applied patch from Patrick Steele adding support for DiscriminatorLength in mappings. 

- Added support for validating nested properties. 

- Applied patch from Roger Chapman allowing ActiveRecord to be used signed in Medium trust.

- Applied patch from Steven Radack which catches invalid configuration of multiple database types. (They must be abstract). 
  Now AR throws an exception rather than silently using the same database.  

Release Candidate 2
===================
