@@ -1,6 +1,8 @@
 1.0
 ===
 
+- Allow CompositeUserType to be applied to fields too.
+
 - Adding support for integrating NH models and AR models.
   Sample of how this can be done can be found here:
   https://svn.castleproject.org/svn/castle/trunk/ActiveRecord/Castle.ActiveRecord.Tests/IntegrationWithNHibernateTestCase.cs
